--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,10 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
+build
+dump*
+old
+.vscode
+.old
+sdkconfig
+sdkconfig.old
+esp32_toolchain.cmake
 *.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+managed_components
