--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.cpp" "gpio_handler.cpp" "battery_state.cpp" "uros_entities.cpp" "esp32_serial_transport.c"
+idf_component_register(SRCS "main.cpp" "gpio_handler.cpp" "battery_helpers.cpp" "uros_entities.cpp" "esp32_serial_transport.c"
                         INCLUDE_DIRS "." "../include"
                         REQUIRES ESP_DalyBMS ESP_IC_Led_RGB micro_ros_espidf_component driver)
